--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -1,14 +1,17 @@
 ﻿<Window
-     x:Class="WPF_VideoSort.View.MainWindow"
+    x:Class="WPF_VideoSort.View.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:VM="clr-namespace:WPF_VideoSort.ViewModels"
     Title="Video Sorter"
     Width="500"
     Height="350"
     mc:Ignorable="d">
+    <Window.DataContext>
+        <VM:MainViewModel/>
+    </Window.DataContext>
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -52,7 +55,7 @@
             Grid.Row="2"
             Height="30"
             Margin="0,10"
-            Command="{Binding SortVideosAsyncCommand}"
+            Command="{Binding SortVideosCommand}"
             Content="Sortieren" />
         <!--  Log-Ausgabe  -->
         <ListBox
