--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -3,6 +3,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:VM="clr-namespace:WPF_VideoSort.ViewModels"
+    xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
+    xmlns:behaviors="clr-namespace:WPF_VideoSort.Behaviors"
     xmlns:converter="clr-namespace:WPF_VideoSort.Converter"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -40,7 +42,12 @@
             <TextBox
                 Width="300"
                 Margin="5,0"
-                Text="{Binding SourceFolder, Mode=TwoWay}" />
+                Tag="source"
+                Text="{Binding SourceFolder, Mode=TwoWay}">
+                <b:Interaction.Behaviors>
+                    <behaviors:DropFolderBehavior />
+                </b:Interaction.Behaviors>
+            </TextBox>
             <Button
                 Width="30"
                 Command="{Binding SelectSourceFolderCommand}"
@@ -56,7 +63,12 @@
             <TextBox
                 Width="300"
                 Margin="5,0"
-                Text="{Binding DestinationFolder, Mode=TwoWay}" />
+                Tag="destination"
+                Text="{Binding DestinationFolder, Mode=TwoWay}">
+                <b:Interaction.Behaviors>
+                    <behaviors:DropFolderBehavior />
+                </b:Interaction.Behaviors>
+            </TextBox>
             <Button
                 Width="30"
                 Command="{Binding SelectDestinationFolderCommand}"
@@ -92,12 +104,7 @@
             Margin="0,5"
             Visibility="{Binding IsSorting, Converter={StaticResource BooleanToVisibilityConverter}}"
             Value="{Binding ProgressValue}" />
-        <TextBlock
-            Grid.Row="4"
-            Margin="0,30,0,0"
-            HorizontalAlignment="Center"
-            Text="{Binding RemainingTime}"
-            Visibility="{Binding IsSorting, Converter={StaticResource BooleanToVisibilityConverter}}" />
+
         <!--  Log-Ausgabe  -->
         <ListBox
             Grid.Row="5"
